# cboco

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cboco/: __init__.py  __main__.py  test_annotation_matching.py  test_dataset_creation.py  test_eval.py
src/cboco/dataset/: __init__.py  annotation.py  category.py  contour_size.py  dataset.py  image.py
src/cboco/evaluation/: __init__.py  ap.py  evaluate_dataset.py  intersection.py  match.py  precalculate.py
test_data/: A.json  B.json  COCO Data.md
