[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cboco"
version = "0.0.1"
authors = [
  { name="cbosoft", email="cbosoft@protonmail.com" },
]
description = "MS Coco dataset abstraction and serialisation."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cbosoft/cboco"
"Bug Tracker" = "https://github.com/cbosoft/cboso/issues"